@@ -1,3 +1,6 @@
+HEAD
+	+ Invalidate openchange VDomains model cache on added, modified and
+	  deleted rows operation in DomainTable model
 4.0
 	+ Set version to 4.0
 	+ Use refactored internalNetworks from network module
